Changed page title

--- a/packages/mtd-web-ui/src/index.html
+++ b/packages/mtd-web-ui/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <base href="/" />
-    <title>MotherTongues Dictionary</title>
+    <title>Southern Michif Phrasebook</title>
 
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta property="og:title" content="MotherTongues Dictionary" />
+    <meta property="og:title" content="Southern Michif Phrasebook" />
     <meta property="og:image" content="/assets/logo.png" />
 
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
