--- a/packages/mtd-mobile-ui/src/index.html
+++ b/packages/mtd-mobile-ui/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>MotherTongues Dictionary</title>
+    <title>Southern Michif Phrasebook</title>
 
     <base href="/" />
 
